[package]
name = "lantern"
version = "0.4.0"
description = "LANtern — local network device scanner"
authors = ["Nick Trochalakis"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "lantern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "process"] }
ipnetwork = "0.20"
network-interface = "2"
dns-lookup = "2"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
hickory-resolver = { version = "0.25", features = ["system-config", "tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
